# monad-bft

./: .dockerignore  .gitignore  .gitmodules  .tomlfmt.toml  AGENTS.md  Cargo.toml  LOG.md  NAMESPACED_L2.md  README.md  TXFORWARD_INTEGRATION_TESTING.md  TXPOOL_ARCH.md  cluster.toml  manytrace.toml  node_analysis.ipynb  overall_latency_analysis.ipynb  queryx-demo-curls.sh  script.sh  setup_udp_buffers.sh  simnet.toml
monad-archive/: .gitignore  Cargo.toml  README.md
monad-archive/docs/: bft-index-migration-code-changes.md  bft-index-migration-plan.md
monad-archive/examples/: get_logs_benchmarks.rs  migrate_bft_bodies.rs  pull_legacy_headers.rs  reconcile_bft_index.rs  synthetic_large_blocks.rs  upload_index_pages.rs  verify_bft_copy_correctness.rs
monad-archive/scripts/: create-bucket.sh
monad-archive/src/: archive_interface.rs  archive_reader.rs  aws_cli.rs  chain_data_external.rs  chain_data_ingest.rs  chain_data_source.rs  cli.rs  dynamodb.rs  error.rs  failover_circuit_breaker.rs  lib.rs  main.rs  metrics.rs  prelude.rs  rlp_offset_scanner.rs  s3_archive.rs  test_utils.rs  triedb.rs  worker_loop.rs
monad-archive/tests/: chain_data_dynamo_format.rs  chain_data_external_roundtrip.rs  chain_data_mongo_e2e.rs  chain_data_mongo_format.rs
monad-async-state-verify/: Cargo.toml
monad-async-state-verify/src/: lib.rs  local.rs  peer.rs
monad-blockstore/: Cargo.toml
monad-blockstore/src/: lib.rs  store.rs  store_db.rs  types.rs
monad-bls/: Cargo.toml
monad-bls/benches/: bls.rs
monad-bls/src/: aggregation_tree.rs  bls.rs  lib.rs
monad-chain-data/: .gitignore  Cargo.toml  PLAN-caching.md  chain-data-ingest-service.sh  queryX  remote-ingest.sh
monad-chain-data-ingest/: Cargo.toml  README.md
monad-chain-data-ingest/src/: lib.rs
monad-chain-data/docs/: README.md  deep-dive-archive-backed-payloads.md  deep-dive-bitmap-index.md  deep-dive-frontier-model.md  deep-dive-ingest-batching.md  deep-dive-primary-standby.md  onboarding.md  ops-runbook.md  overview.md  plan-archiver-embedded-chain-data-ingest.md  queryx-rpc-runbook.md
monad-chain-data/src/: api.rs  blocks.rs  config.rs  error.rs  external.rs  family.rs  ingest_config.rs  ingest_controller.rs  ingest_core.rs  ingest_helpers.rs  ingest_recover.rs  ingest_resolver.rs  ingest_rtt.rs  ingest_runner.rs  ingest_source.rs  ingest_types.rs  lib.rs  mem_scan.rs  status.rs  testkit.rs
monad-chain-data/tests/: artifact_checksum.rs  batch_api.rs  batch_size_one_parity.rs  blob_store.rs  block_hash_index.rs  block_header_artifact.rs  cache.rs  dynamo_blobstore.rs  dynamo_metastore.rs  external_payload.rs  fjall_batch_atomicity.rs  fjall_smoke.rs  fjall_tuning.rs  get_transaction.rs  ingest_block_shape.rs  log_bitmap_fragments.rs  log_bitmap_pages.rs  log_dir_buckets.rs  log_dir_fragments.rs  log_ingest.rs  log_ingest_validation.rs  mongo_metastore.rs  multi_block_ingest.rs  publication_fencing.rs  query_bitmap_page_counts_manifest.rs  query_bitmap_page_intersection.rs  query_blocks.rs  query_logs_blocks_relation.rs  query_logs_indexed.rs  query_logs_limits.rs  query_logs_range_resolution.rs  query_logs_scan.rs  query_logs_transactions_relation.rs  query_traces.rs  query_transactions.rs  query_transfers.rs  region_cache.rs  row_cache.rs  row_codec_dict.rs  s3_blobstore.rs  (+5 more)
monad-compressible/: Cargo.toml
monad-compressible/src/: lib.rs
monad-discovery/: Cargo.toml
monad-discovery/src/: lib.rs  message.rs  nop_discovery.rs  staked_discovery.rs
monad-enclave-signer/: Cargo.toml  HANDOFF-ATTESTATION.md  README.md
monad-enclave-signer-proto/: Cargo.toml
monad-enclave-signer-proto/src/: client.rs  lib.rs
monad-enclave-signer/scripts/: build-linux.sh  provision-real-vsock.sh  run-vsock-loopback.sh
monad-enclave-signer/src/: attest.rs  lib.rs
monad-enclave-signer/tests/: e2e_unix.rs
monad-eth-account-states/: Cargo.toml
monad-eth-account-states/src/: lib.rs  tx_states.rs
monad-eth-ledger/: Cargo.toml
monad-eth-ledger/src/: lib.rs
monad-eth-tx-processor/: Cargo.toml
monad-eth-tx-processor/src/: lib.rs
monad-eth-txpool/: Cargo.toml
monad-eth-txpool/benches/: clear.rs  create_proposal.rs  insert.rs  proposal_bench.rs  update.rs
monad-eth-txpool/src/: event_tracker.rs  lib.rs  metrics.rs  pool.rs  test_utils.rs  transaction.rs  utils.rs
monad-eth-txpool/test-utils/: mod.rs
monad-eth-txpool/tests/: forward.rs  performance.rs  pool.rs  txpool.rs
monad-eth-vpool/: Cargo.toml
monad-eth-vpool/src/: lib.rs  metrics.rs
monad-event-ring/: Cargo.toml
monad-event-ring/benches/: snapshot_raw.rs
monad-event-ring/src/: ffi.rs  lib.rs  type.rs
monad-exec-event/: Cargo.toml  build.rs
monad-exec-event/src/: event.rs  event_client.rs  event_metadata.rs  event_queue.rs  event_reader.rs  event_types.rs  lib.rs
monad-exec-events/: Cargo.toml  build.rs  wrapper.h
monad-exec-events/benches/: snapshot_exec.rs
monad-exec-events/src/: block.rs  ffi.rs  lib.rs  reader.rs
monad-fair-queue/: Cargo.toml
monad-fair-queue/benches/: queue_bench.rs
monad-fair-queue/src/: lib.rs  metrics.rs  pool.rs  queue.rs
monad-fuzz/: Cargo.toml  run-quick.sh
monad-fuzz/fuzz_targets/: fuzz_deserialize.rs  fuzz_parse_message.rs  fuzz_parse_message_differential.rs  fuzz_raptor_decoder.rs
monad-leanudp/: Cargo.toml
monad-leanudp/benches/: decoder.rs
monad-leanudp/src/: decoder.rs  encoder.rs  lib.rs  metrics.rs  pool.rs
monad-leanudp/tests/: public_api.rs  tests.rs
monad-mock-ledger-machine/: Cargo.toml  build.rs
monad-mock-ledger-machine/src/: block_generator.rs  example.rs  faucet.rs  lib.rs  main.rs  runloop.rs  runloop_interface_monad.rs  runloop_interface_ocaml.rs
monad-peer-score/: Cargo.toml
monad-peer-score/src/: dynamic_cap.rs  ema.rs  lib.rs  metrics.rs
monad-pprof/: Cargo.toml
monad-pprof/src/: heap.rs  lib.rs
monad-query-config/: Cargo.toml
monad-query-config/src/: ingest.rs  lib.rs  reader.rs
monad-query-engine/: Cargo.toml
monad-query-engine/src/: bitmap.rs  lib.rs  (+10 more)
monad-query-indexer/: Cargo.toml
monad-query-primitives/: Cargo.toml
monad-query-read/: Cargo.toml
(+1446 files in other folders)
