[workspace]

members = [
    "monad-blocktree",
    "monad-consensus",
    "monad-crypto",
    "monad-cmd-counter",
    "monad-executor",
    "monad-driver",
    "monad-p2p",
    "monad-proto",
    "monad-state",
    "monad-testutil",
    "monad-types",
    "monad-validator",
    "monad-viz",
    "monad-wal",
]

[profile.dev]
opt-level = 1
