[package]
name = "monad-archive"
description = "Monad archive solution"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[[bin]]
name = "monad-archive-checker"
bench = false

[[bin]]
name = "monad-archiver"
bench = false

[[bin]]
name = "monad-block-writer"
bench = false

[[bin]]
name = "monad-indexer"
bench = false

[features]
default = ["chain-data-ingest"]
mongodb-integration-tests = []
chain-data-ingest = [
    "dep:monad-query-config",
    "dep:monad-query-errors",
    "dep:monad-query-primitives",
    "dep:monad-query-types",
    "dep:monad-query-write",
]

[dependencies]
monad-query-config = { workspace = true, features = ["s3", "dynamo", "mongo"], optional = true }
monad-query-errors = { workspace = true, optional = true }
monad-query-primitives = { workspace = true, optional = true }
monad-query-types = { workspace = true, optional = true }
monad-query-write = { workspace = true, optional = true }
monad-compress = { workspace = true }
monad-eth-types = { workspace = true }
monad-triedb-utils = { workspace = true }
monad-types = { workspace = true }

alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
mongodb = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
] }
tokio-retry = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }

[dev-dependencies]
monad-eth-testutil = { workspace = true }
monad-query-engine = { workspace = true }
monad-query-read = { workspace = true }
monad-query-testkit = { workspace = true }
