[package]
name = "monad-blockstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.20.1"
serde = {version = "1.0", features=["derive"]} # replace with protobuf in the future
rust-crypto = "0.2"
bincode = "1.3.3"
ordcode = "0.2.2"

[dev-dependencies]
tempfile = "3.4.0"