[package]
name = "monad-chain-data-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chain-data-ingest"
path = "../monad-chain-data/src/bin/chain-data-ingest.rs"
required-features = ["archive-ingest"]

[features]
default = []
archive-ingest = ["monad-chain-data/fjall"]
s3 = ["monad-chain-data/s3"]
dynamo = ["monad-chain-data/dynamo", "dep:aws-sdk-dynamodb"]
tokio-console = ["dep:console-subscriber"]

[dependencies]
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
console-subscriber = { version = "0.5", optional = true }
eyre = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
monad-archive = { workspace = true }
monad-chain-data = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
