[package]
name = "monad-chain-data"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-rpc-types-eth = { workspace = true, optional = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
fjall = { version = "3.1", optional = true }
roaring = "0.11"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"], optional = true }

[features]
default = []
# Enables `TxEntry::to_rpc_transaction`, converting a stored tx into an
# `alloy_rpc_types_eth::Transaction`. Off by default so the crate stays
# narrow; the consensus envelope is always accessible via `TxEntry::envelope`.
alloy-rpc-types-eth = ["dep:alloy-rpc-types-eth"]
# Enables the embedded fjall backend (FjallStore). Pulls in tokio because
# fjall is sync and the trait impls wrap blocking work in spawn_blocking.
fjall = ["dep:fjall", "dep:tokio"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
