[package]
name = "monad-chain-data"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[features]
default = ["s3", "dynamo"]
# Forwarded to monad-query-types: enables `TxEntry::to_rpc_transaction`.
alloy-rpc-types-eth = ["monad-query-types/alloy-rpc-types-eth"]
# Storage backend features, forwarded to monad-query-store.
s3 = ["monad-query-store/s3"]
dynamo = ["monad-query-store/dynamo", "monad-query-write/dynamo"]
mongo = ["monad-query-store/mongo"]

[dependencies]
monad-query-engine = { workspace = true }
monad-query-errors = { workspace = true }
monad-query-primitives = { workspace = true }
monad-query-read = { workspace = true }
monad-query-store = { workspace = true, default-features = false }
monad-query-types = { workspace = true }
monad-query-write = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true, features = ["derive"] }
blake3 = { workspace = true }
bytes = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
roaring = "0.11"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
hyper-util = { version = "0.1", features = ["server-auto", "http1", "http2", "tokio"] }
# In-process, filesystem-backed S3 server used only by the gated `s3_blobstore`
# integration test (run with `--features s3`). `s3s` provides a hyper/tower
# `S3Service`; `s3s-fs` is its filesystem backend. `hyper-util` serves the
# service over a local TCP listener. These are dev-only and never affect the
# library build (`cargo check` does not compile dev-dependencies).
# Pinned to 0.12: s3s 0.13 raised its MSRV to rustc 1.92, above this
# toolchain. 0.12 has MSRV 1.86 and the same in-process serving API.
s3s = "=0.12.0"
s3s-fs = "=0.12.0"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
# Dev-only: the Redacted credential newtype's TOML wire-shape test.
toml = { workspace = true }
# Dev-only: lets the `read_bench` example surface the query-side debug stats
