[package]
name = "monad-compressible"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
bytes = { workspace = true }
monad-consensus = { path = "../monad-consensus" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-compress = { path = "../monad-compress" }
monad-crypto = { path = "../monad-crypto" }
monad-state = { path = "../monad-state" }