[package]
name = "monad-enclave-signer"
version = "0.1.0"
edition = "2021"

# The enclave-side signer service (`monad-signer`) and the one-time provisioning
# client (`monad-keyloader`). Depends on the key crates + keystore; the wire
# protocol lives in monad-enclave-signer-proto.

[lib]
bench = false

[dependencies]
# enclave-signer features enabled so tests can exercise the node-side
# KeyPair::Remote / BlsKeyPair::Remote enum variants over the wire.
monad-bls = { workspace = true, features = ["enclave-signer"] }
monad-keystore = { workspace = true }
monad-enclave-signer-proto = { workspace = true }
monad-secp = { workspace = true, features = ["enclave-signer"] }

clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"

[dev-dependencies]
monad-crypto = { workspace = true }

[[bin]]
name = "monad-signer"
path = "src/bin/monad-signer.rs"

[[bin]]
name = "monad-keyloader"
path = "src/bin/monad-keyloader.rs"

[[bin]]
name = "monad-signer-bench"
path = "src/bin/monad-signer-bench.rs"
