[package]
name = "monad-eth-account-states"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-eth-tx = { path = "../monad-eth-tx" }
monad-eth-types = { path = "../monad-eth-types" }

[dev-dependencies]
alloy-rlp = { workspace = true }
hex = { workspace = true }
rand_chacha = { workspace = true }
reth-primitives = { workspace = true }
