[package]
name = "monad-eth-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
monad-consensus-types = { version = "0.1.0", path = "../monad-consensus-types" }
monad-crypto = { version = "0.1.0", path = "../monad-crypto" }
monad-eth-block-policy = { version = "0.1.0", path = "../monad-eth-block-policy" }
monad-eth-block-validator = { version = "0.1.0", path = "../monad-eth-block-validator" }
monad-executor = { version = "0.1.0", path = "../monad-executor" }
monad-executor-glue = { version = "0.1.0", path = "../monad-executor-glue" }
monad-types = { version = "0.1.0", path = "../monad-types" }
monad-updaters = { version = "0.1.0", path = "../monad-updaters" }
tracing.workspace = true
