[package]
name = "monad-eth-tx-processor"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-eth-account-states = { path = "../monad-eth-account-states" }
monad-eth-tx = { path = "../monad-eth-tx" }

alloy-rlp = { workspace = true }
bytes = { workspace = true }
