[package]
name = "monad-eth-txpool"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-block-policy = { path = "../monad-eth-block-policy" }
monad-state-backend = { path = "../monad-state-backend" }
monad-eth-tx = { path = "../monad-eth-tx" }
monad-eth-types = { path = "../monad-eth-types" }
monad-types = { path = "../monad-types" }
monad-eth-testutil = { path = "../monad-eth-testutil" }
monad-testutil = { path = "../monad-testutil" }

alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
bytes = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
reth-primitives = { workspace = true }
sorted_vector_map = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
flume = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing-test = { workspace = true }
tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }

monad-crypto = { path = "../monad-crypto" }
monad-eth-vpool = { path = "../monad-eth-vpool" }
monad-perf-util = { path = "../monad-perf-util" }
monad-types = { path = "../monad-types" }

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "create_proposal"
harness = false

[[bench]]
name = "clear"
harness = false

