[package]
name = "monad-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
afl = "*"

bytes = { workspace = true }
lru = { workspace = true }

monad-raptorcast = { workspace = true }
monad-crypto = { workspace = true }
monad-secp = { workspace = true }
monad-bls = { workspace = true }
monad-state = { workspace = true }
monad-eth-types = { workspace = true }

[[bin]]
name = "fuzz_parse_message"
path = "fuzz_targets/fuzz_parse_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_deserialize"
path = "fuzz_targets/fuzz_deserialize.rs"
test = false
doc = false
bench = false
