[package]
name = "monad-leanudp"
version = "0.1.0"
edition = "2021"
description = "Lightweight UDP protocol with fragmentation and ordered reassembly"

[dependencies]
bytes = { workspace = true }
indexmap = { workspace = true }
monad-dynamic-cap = { workspace = true }
monad-executor = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies.tikv-jemallocator]
workspace = true
features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms", "background_threads"]
optional = true

[dev-dependencies]
criterion = { workspace = true }

[features]
jemallocator = ["tikv-jemallocator"]

[[bench]]
name = "decoder"
harness = false
