[package]
name = "monad-mock-ledger-machine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monad-mock-ledger-machine"
bench = false

[dependencies]
monad-bls = { workspace = true }
monad-chain-config = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-block-policy = { workspace = true }
monad-eth-block-validator = { workspace = true }
monad-eth-types = { workspace = true }
monad-executor = { workspace = true }
monad-executor-glue = { workspace = true }
monad-ledger = { workspace = true }
monad-secp = { workspace = true }
monad-state-backend = { workspace = true }
monad-tfm = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }

itertools = { workspace = true }
