[package]
name = "monad-peer-score"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
humantime = { workspace = true }
lru = { workspace = true }
monad-executor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
