[package]
name = "monad-pprof"
version = "0.1.0"
edition = "2024"

[features]
jemallocator = ["dep:jemalloc_pprof"]

[dependencies]
actix-server = { workspace = true }
actix-web = { workspace = true }
jemalloc_pprof = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
