[package]
name = "monad-query-config"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[features]
default = ["s3", "dynamo"]
s3 = ["monad-query-store/s3"]
dynamo = ["monad-query-store/dynamo", "monad-query-write/dynamo"]
mongo = ["monad-query-store/mongo"]

[dependencies]
monad-query-engine = { workspace = true }
monad-query-errors = { workspace = true }
monad-query-primitives = { workspace = true }
monad-query-read = { workspace = true }
monad-query-store = { workspace = true, default-features = false }
monad-query-types = { workspace = true }
monad-query-write = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp"] }
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
