[package]
name = "monad-query-config"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[features]
default = ["s3", "dynamo"]
s3 = ["monad-query-store/s3"]
dynamo = ["monad-query-store/dynamo", "monad-query-write/dynamo"]
mongo = ["monad-query-store/mongo"]

[dependencies]
eyre = { workspace = true }
monad-query-engine = { workspace = true }
monad-query-errors = { workspace = true }
monad-query-primitives = { workspace = true }
monad-query-read = { workspace = true }
monad-query-store = { workspace = true, default-features = false }
monad-query-write = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
