[package]
name = "monad-query-primitives"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-query-errors = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
futures = { workspace = true }
