[package]
name = "monad-query-primitives"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
monad-query-errors = { workspace = true }
num_enum = { workspace = true }
